--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,10 @@ jobs:
 
       - name: Install dependencies
         run: yarn install
+        run: yarn pack --out ./artifacts/filigran-chatbot-${{ github.ref }}.tgz
 
       - name: Release Filigran chatbot
         id: create_release
-        run: gh release create ${{ github.ref }}
+        run: gh release create ${{ github.ref }} ./artifacts/filigran-chatbot-*.tgz
         env:
           GITHUB_TOKEN: ${{ github.token }}
