--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "filigran-chatbot",
-  "version": "1.0.0",
+  "version": "0.0.6",
   "description": "Javascript library to display chatbot on your website",
   "type": "module",
   "main": "dist/index.js",
@@ -61,5 +61,6 @@
     "tailwindcss": "3.3.1",
     "typescript": "5.0.3",
     "uuid": "^9.0.1"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
