--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,14 +21,14 @@ jobs:
 
       - name: Install dependencies
         run: |
-          echo "Starting release version ${{ github.ref }}"
+          echo "Starting release version ${{ github.ref_name }}"
           #Disable auto tag from yarn since we already have a git tag
           yarn config set version-git-tag false
-          yarn version --new-version ${{ github.ref }}
+          yarn version --new-version ${{ github.ref_name }}
           yarn install
-          yarn pack --out filigran-chatbot-${{ github.ref }}.tgz
+          yarn pack --out filigran-chatbot-${{ github.ref_name }}.tgz
           ls -lart
           pwd
-          gh release create ${{ github.ref }} filigran-chatbot-*.tgz
+          gh release create ${{ github.ref_name }} filigran-chatbot-*.tgz
         env:
           GITHUB_TOKEN: ${{ github.token }}
