--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,7 @@ jobs:
           echo "Starting release version ${{ github.ref_name }}"
           #Disable auto tag from yarn since we already have a git tag
           yarn config set version-git-tag false
+          yarn config set version-commit-hooks false
           yarn version --new-version ${{ github.ref_name }}
           yarn install
           yarn pack --out filigran-chatbot-${{ github.ref_name }}.tgz
@@ -31,4 +32,4 @@ jobs:
           pwd
           gh release create ${{ github.ref_name }} filigran-chatbot-*.tgz
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secret.PERSO_GITHUB_TOKEN }}
