--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,4 +34,4 @@ jobs:
           pwd
           gh release create ${{ github.ref_name }} filigran-chatbot-*.tgz
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.PERSO_GITHUB_TOKEN }}
