--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,4 +37,4 @@ jobs:
           pwd
           gh release create ${{ github.ref_name }} filigran-chatbot-*.tgz
         env:
-          GH_TOKEN: ${{ secrets.PERSO_GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_PERSO_TOKEN }}
