--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,9 +32,6 @@ jobs:
           yarn pack --out filigran-chatbot-${{ github.ref_name }}.tgz
           ls -lart
           pwd
-          tar czf filigran-chatbot-${{ github.ref_name }}.tgz dist
-          ls -lart
-          pwd
           gh release create ${{ github.ref_name }} filigran-chatbot-*.tgz
         env:
-          GH_TOKEN: ${{ secrets.GH_PERSO_TOKEN }}
+          GH_TOKEN: ${{ github.token }}
